# PR1-IA-2324

./: .gitignore  README.md
rust/: Cargo.toml  Grafo5-bfs.txt  Grafo5-dfs.txt  Grafo5-mod-bfs.txt  Grafo6-bfs.txt  Grafo6-dfs.txt  Grafo6-mod-bfs.txt
rust/src/: graph.rs  graphmap.rs  lib.rs  macros.rs
typescript/: .eslintrc.cjs  package.json  pnpm-lock.yaml  prettier.config.js  tsconfig.json  tsup.config.ts
typescript/src/: cli.ts  graphmap.ts
