[package]
name = "usig"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
indexmap = "2.0.0"
miette = { version = "5.10.0", features = ["fancy"] }
nom = "7.1.3"
nom-supreme = "0.8.0"
rayon = "1.8.0"
tokio = "1.32.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
typed-arena = "2.0.2"

[[bin]]
name = "usig"
