[package]
name = "usig"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
color-eyre = "0.6.2"
comfy-table = "7.0.1"
indexmap = "2.0.0"
miette = { version = "5.10.0", features = ["fancy"] }
nom = { version = "7.1.3" }
nom-supreme = { version = "0.8.0" }
rayon = "1.8.0"
tokio = "1.32.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

# [features]
# build-binary = ["nom", "nom-supreme", "clap"]

[[bin]]
name = "usig"
# required-features = ["build-binary"]
